Add additional information

--- a/Readme
+++ b/Readme
@@ -1,1 +1,2 @@
-Решил делать каждую лабораторную работу на отдельной ветке
+Решил делать каждую лабораторную работу на отдельной ветке общего проекта (как опсисано в перезнтации из мудла "Инструкция по Git").
+Если вам не удобно данное представление, напишите, могу переделать.
